--- a/src/index.html
+++ b/src/index.html
@@ -2,22 +2,29 @@
 <html>
 <head>
   <title>Alexander Fedorov</title>
-  <!-- TODO: Name the portfolio properly, like, "Alexander Fedorov | Developer"... Sucky title... -->
+  <!-- TODO: Name the portfolio properly, like, "… | Developer"... Sucky title... Do we really need a title? -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <script src="https://unpkg.com/vue"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.17.1/matter.js"></script>
 </head>
 <body class="h-100 text-center text-white bg-dark">
-  <!-- TODO: Need an onmousemove handler that sets CSS --x and --y on hovered-over elements (so that we can do cursor-based gradients in CSS), and removes them as needed. -->
-
   <span id="app" class="cover-container mx-auto w-100 h-100 p-3 mx-auto flex-column">
     <world _class="wholeWidth oneScreen d-flex flex-column justify-content-center align-items-center">
-      <header class="mb-auto">
-        <!-- TODO: Want a selected "Home" navlink, and the "Projects" tab, which would take us just below. -->
+      <header class="mb-auto align-self-end" style="margin-right:1rem">
+        <nav class="nav fw-bold">
+          <a href="#" class="nav-link active">Home</a>
+          <a href="#projects" class="nav-link">Projects</a>
+        </nav>
       </header>
       <p class="lead">
         <constraint name=link2></constraint>
-        <animated-text :value="'A ' + title + ' that ' + business + '.'"></animated-text>
+        <constraint name=link4></constraint>
+        <obj>
+          <constraint name=link3></constraint>
+          <animated-text :value="description.join('')"></animated-text>
+          <constraint name=link4></constraint>
+        </obj>
+        <constraint name=link3></constraint>
         <constraint name=link1></constraint>
       </p>
       <obj class="btn btn-lg fw-bold bg-white">
@@ -31,11 +38,25 @@
 
     <!-- TODO: Also, want projects here, right? -->
     <!-- A card for each, linking to the more involved description... How do we create those? -->
+    <!--    (Maybe CSS-only cards could be good. ...Maybe Vue's single-file components?) -->
+    <!-- TODO: How do we describe image-modifier-project? -->
+    <!--    First of all, is our data format { name:'…', urls:[…], images:[…], description:'…' }? (Markdown description?) I think so, yeah… -->
+
+    <!-- TODO: Look at others' projects' tab data format. Among opened tabs. -->
   </span>
 
   <style>
     body {
       background-color: #36393e;
+    }
+    .nav-link {
+      color: white;
+      border-bottom: .25em solid transparent;
+      opacity: .5;
+    }
+    .nav-link.active {
+      border-bottom-color: currentcolor;
+      opacity: 1;
     }
     .rounded1 {
       display: inline-block;
