--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <script src="https://unpkg.com/vue"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.17.1/matter.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body class="h-100 text-center text-white bg-dark">
   <span id="app" class="cover-container mx-auto w-100 h-100 mx-auto flex-column">
@@ -130,7 +131,7 @@
       align-items: center;
       justify-content: center;
     }
-    .project-card>button {
+    button.btn.btn-primary {
       border: none;
       display: inline-block;
       margin-top: auto;
@@ -138,8 +139,15 @@
       background: radial-gradient(circle at var(--x,-4em) var(--y,-4em), white, #87b7fe 1em, #5092fe 2em, #0d6efd 4em);
       /* Parents give --x/--y to children too, but, that might as well be a feature, not a bug. */
     }
-    .project-card>button:active {
+    button.btn.btn-primary:active {
       background: radial-gradient(circle at var(--x,-4em) var(--y,-4em), white, #9ecfff 1em, #6eb6ff 2em, #3d9eff 4em);
+    }
+    .project-description>.description {
+      white-space: pre-wrap;
+    }
+    .project-description iframe {
+      width: 100%;
+      height: 20em;
     }
   </style>
 
