--- a/src/index.html
+++ b/src/index.html
@@ -145,6 +145,12 @@
     .project-description>.description {
       white-space: pre-wrap;
     }
+    .project-description .iframe-container {
+      /* We want to prevent scroll events from within iframes, but browsers don't give us access, so, we need to prevent scroll here. */
+      height: 19.99em;
+      overflow: hidden scroll;
+      overscroll-behavior: contain;
+    }
     .project-description iframe {
       width: 100%;
       height: 20em;
