Transitions are smooth. (½h.)

--- a/src/index.html
+++ b/src/index.html
@@ -142,6 +142,9 @@
     button.btn.btn-primary:active {
       background: radial-gradient(circle at var(--x,-4em) var(--y,-4em), white, #9ecfff 1em, #6eb6ff 2em, #3d9eff 4em);
     }
+    .project-description {
+      width: 100%;
+    }
     .project-description>.description {
       white-space: pre-wrap;
     }
