Images are satisfactory now.

--- a/src/index.html
+++ b/src/index.html
@@ -158,6 +158,18 @@
       width: 100%;
       height: 20em;
     }
+    .project-description .images {
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: space-evenly;
+    }
+    .project-description .images img {
+      transition: max-height .3s;
+      max-height: 7em;
+    }
+    .project-description .images img:hover {
+      max-height: 28em
+    }
   </style>
 
   <style>
