Project description after cards.

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
       </obj>
       <div class="mt-auto"></div>
     </world>
+    <!-- TODO: Restyle projects to be to the right of the contact button. And move <project-description> to after cards. And don't have those nav links to the elem. -->
     <projects></projects>
   </span>
 
@@ -149,7 +150,7 @@
     }
     .project-description iframe {
       width: 100%;
-      height: 20em;
+      height: 25em;
     }
     .project-description .images {
       display: flex;
