--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset=utf-8>
   <title>Alexander Fedorov</title>
@@ -11,48 +11,35 @@
 </head>
 <body class="h-100 text-center text-white bg-dark">
   <span id="app" class="cover-container mx-auto w-100 h-100 mx-auto flex-column">
-    <world _class="wholeWidth oneScreen d-flex flex-column justify-content-center align-items-center">
-      <header class="mb-auto align-self-end" style="margin-right:1rem; margin-top:1rem">
-        <nav class="nav fw-bold">
-          <a href="#" class="nav-link active">Home</a>
-          <a href="#projects" class="nav-link">Projects</a>
-        </nav>
-      </header>
-      <p class="lead" style="user-select:none">
-        <constraint name=link2></constraint>
-        <constraint name=link4></constraint>
-        <obj>
-          <constraint name=link3></constraint>
-          <animated-text :value="description.join('')"></animated-text>
+    <projects>
+      <div class="wholeWidth oneScreen d-flex flex-column justify-content-center align-items-center">
+        <div class="mb-auto"></div>
+        <p class="lead" style="user-select:none">
+          <constraint name=link2></constraint>
           <constraint name=link4></constraint>
+          <obj>
+            <constraint name=link3></constraint>
+            <animated-text :value="description.join('')"></animated-text>
+            <constraint name=link4></constraint>
+          </obj>
+          <constraint name=link3></constraint>
+          <constraint name=link1></constraint>
+        </p>
+        <obj class="btn btn-lg fw-bold bg-white">
+          <!-- TODO: How do we create the contact form? (And how would it actually contact us? That's a big one.) -->
+          <!--    …May want to host a simple Nodemailer server on Heroku… -->
+          <constraint name=link1></constraint>
+          <a style="text-decoration:none; color:#212529" href=#>Contact</a>
+          <constraint name=link2></constraint>
         </obj>
-        <constraint name=link3></constraint>
-        <constraint name=link1></constraint>
-      </p>
-      <obj class="btn btn-lg fw-bold bg-white">
-        <!-- TODO: How do we create the contact form? (And how would it actually contact us? That's a big one.) -->
-        <constraint name=link1></constraint>
-        <a style="text-decoration:none; color:#212529" href=#>Contact</a>
-        <constraint name=link2></constraint>
-      </obj>
-      <div class="mt-auto"></div>
-    </world>
-    <!-- TODO: Restyle projects to be to the right of the contact button. And move <project-description> to after cards. And don't have those nav links to the elem. -->
-    <projects></projects>
+        <div class="mt-auto"></div>
+      </div>
+    </projects>
   </span>
 
   <style>
     body {
       background-color: #36393e;
-    }
-    .nav-link {
-      color: white;
-      border-bottom: .25em solid transparent;
-      opacity: .5;
-    }
-    .nav-link.active {
-      border-bottom-color: currentcolor;
-      opacity: 1;
     }
     .rounded1 {
       display: inline-block;
@@ -91,12 +78,20 @@
 
   <style>
     /* Styles for projects. */
+    .projects-container {
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: space-evenly;
+      width: 100%;
+    }
+    .projects-container>* {
+      flex: 1 1 30em;
+    }
     .projects {
       display: flex;
       flex-flow: row wrap;
       align-items: stretch;
       justify-content: space-evenly;
-      overflow: hidden;
       padding: 1em;
     }
     .project-card {
